fixed spacing issue on abouot page on certain screen sizes

--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /*-- -------------------------- -->
 <---            ABOUT           -->
 <--- -------------------------- -*/
@@ -106,18 +113,31 @@
         position: relative;
     }
 
-    #bio img {
-        float: left;
-        margin-right: 30px;
-        margin-bottom: 220px;
+    .bio-group {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+    }
+
+    .bio-group img {
+        width: 200px;
+        height: 200px;
+        margin-right: 40px;
     }
 
     #first {
-        margin-bottom: 690px !important;
+        
     }
 
     .last {
-        margin-bottom: 300px !important;
+       
     }
 
     .who-group h2 {
